# platforminfo

./: .pypirc  CODE_OF_CONDUCT.md  LICENSE  README.md  formatter.sh  osfinder.py  platforminfo.py  pyproject.toml  pyproject_old.toml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature-request.md
.github/workflows/: main.yml  python-publish-ghn.yml  python-publish.yml
build-scripts-cci/: pypi-upload.sh
helper/: platforminfolib.py
platforminfo/: __init__.py  __main__.py  cli.py  platforminfo.py  strings.py  workflow_test.yaml
