# pyproject.toml

[build-system]
requires      = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platforminfo"
version = "1.0.0beta1"
description = "System info made easy - Python library to find system info on your computer."
readme = "README.md"
authors = [{ name = "Tejas Raman", email = "tejasraman@icloud.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["system", "os", "sysinfo", "winver", "osver", "osversion"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["yapf", "coverage", "pytest", "codacy-coverage"]

[project.urls]
"Homepage" = "https://github.com/platforminfo/platforminfo"
"Bug Tracker" = "https://github.com/platforminfo/platforminfo/issues"
"Documentation" = "https://platforminfo.github.io"

