[tool.poetry]
name = "platforminfo"
version = "1.0.0beta5"
description = "System info for Python made simple. PlatformInfo is designed to provide a simple, yet granular interface to find system information on all major operating systems within Python."
authors = ["Tejas Raman <tejasraman@icloud.com>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
codacy-coverage = "^1.3.11"
pytest = "^7.3.0"
coverage = "^7.4.0"

[tool.poetry.scripts]
platforminfo = "platforminfo.cli:picli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
